#
# Copyright (c) 2018 Nordic Semiconductor ASA
#
# SPDX-License-Identifier: LicenseRef-BSD-5-Clause-Nordic
#

add_subdirectory(bin)

add_subdirectory_ifdef(CONFIG_BSD_LIBRARY bsdlib)
add_subdirectory_ifdef(CONFIG_DK_LIBRARY dk_buttons_and_leds)
add_subdirectory_ifdef(CONFIG_AT_CMD at_cmd)
add_subdirectory_ifdef(CONFIG_AT_NOTIF at_notif)
add_subdirectory_ifdef(CONFIG_AT_HOST_LIBRARY at_host)
add_subdirectory_ifdef(CONFIG_AT_CMD_PARSER at_cmd_parser)
add_subdirectory_ifdef(CONFIG_LTE_LINK_CONTROL lte_link_control)
add_subdirectory_ifdef(CONFIG_MODEM_INFO modem_info)
add_subdirectory_ifdef(CONFIG_PDN_MANAGEMENT pdn_management)
add_subdirectory_ifdef(CONFIG_MULTITHREADING_LOCK multithreading_lock)
add_subdirectory_ifdef(CONFIG_FPROTECT fprotect)
add_subdirectory(flash_patch)
add_subdirectory_ifdef(CONFIG_RESET_ON_FATAL_ERROR fatal_error)
add_subdirectory_ifdef(CONFIG_MODEM_KEY_MGMT modem_key_mgmt)
